# CSU23021-Microprocessor-Systems

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  apps_auto_set_url.cmake
assignments/: CMakeLists.txt
assignments/assign01/: CMakeLists.txt  assign01.S  assign01.c
assignments/assign02/: CMakeLists.txt  assign02.S  assign02.c
examples/: CMakeLists.txt
examples/blink_asm/: CMakeLists.txt
examples/blink_c/: CMakeLists.txt  blink_c.c
examples/hello_c/: CMakeLists.txt  hello_c.c
examples/multi_c/: CMakeLists.txt  multi_c.c
examples/ws2812_rgb/: CMakeLists.txt  ws2812_rgb.c
labs/: CMakeLists.txt
labs/lab01/: CMakeLists.txt  README.md  diagram.json  lab01.c
labs/lab02/: CMakeLists.txt  README.md  diagram.json  lab02.c
labs/lab03/: CMakeLists.txt  README.md  diagram.json  lab03.S
labs/lab04/: CMakeLists.txt  README.md  lab04.S  lab04.c  lab04_rslt.txt
labs/lab05/: CMakeLists.txt  README.md  lab05.S
labs/lab06/: CMakeLists.txt  README.md  lab06.c  lab06_rslt.txt
labs/lab07/: CMakeLists.txt  README.md  lab07.c  lab07_rslt.txt
labs/lab08/: CMakeLists.txt  README.md  lab08.S  lab08.c
labs/lab09/: CMakeLists.txt  README.md  lab09.S  lab09.c  lab09.pio  lab09_rslt.txt
labs/lab10/: CMakeLists.txt  README.md  lab10.c
tools/: pico-env.cmd
